@@ -1,4 +1,5 @@
 ﻿- Add support for private airports (aviation club)
+- Defer to Transport Lines Manager for intercity passenger vehicles (passenger trains, buses, aircraft) if TLM is present
 
 
 Version 1.2 -
